Bug 1024470 - Make sure we run InitOnContentProcessCreated in all cases.